did some minor changes regarding size

--- a/style.css
+++ b/style.css
@@ -117,6 +117,8 @@ main {
     justify-content: center;
     align-items: center;
     gap: 20px;
+    width: 600px;
+    text-align: center;
 }
 
 .featured-flower-area {
