--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    box-shadow: 0px 45px 50px rgba(163, 91, 131, 0.288);
 }
 
 .section-title {
@@ -88,7 +89,7 @@ body {
     height: 635px;
 }
 
-/* THE HEADER SECTION STYLES END HERE*/
+/* HEADER SECTION STYLES END HERE*/
 
 
 /* MAIN SECTION STYLE STARTS HERE */
@@ -372,8 +373,9 @@ main {
 }
 
 .location-time-img img {
-    width: 480px;
-    height: 600px;
+    width: 650px;
+    height: 810px;
+    border-radius: 5px;
 }
 
 .location-time-desc {
@@ -383,6 +385,16 @@ main {
     justify-content: flex-start;
     align-items: flex-start;
     gap: 20px;
+}
+
+.location-time-desc hr {
+    width: 70px;
+    height: 7px;
+    text-align:left;
+    margin-left:0;
+    background-color: #E55473;
+    border: 0;
+    border-radius: 10px;
 }
 
 .location-time-desc address {
